// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider component snapshots dark theme × md 1`] = `
<View
  accessibilityActions={
    [
      {
        "name": "increment",
      },
      {
        "name": "decrement",
      },
    ]
  }
  accessibilityLabel="Slider"
  accessibilityRole="adjustable"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 40,
    }
  }
  height={20}
  justifyContent="center"
  onAccessibilityAction={[Function]}
  opacity={1}
  testID="slider"
>
  <View
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#374151",
        "borderRadius": 3,
        "height": 6,
      }
    }
    testID="slider-track"
  >
    <View
      style={
        {
          "backgroundColor": "#60A5FA",
          "borderRadius": 3,
          "height": 6,
          "width": 0,
        }
      }
      testID="slider-fill"
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "backgroundColor": "#F9FAFB",
        "borderColor": "#374151",
        "borderRadius": 10,
        "borderWidth": 1,
        "height": 20,
        "left": -10,
        "position": "absolute",
        "width": 20,
      }
    }
    testID="slider-thumb"
  />
</View>
`;

exports[`Slider component snapshots default (md, value=50) 1`] = `
<View
  accessibilityActions={
    [
      {
        "name": "increment",
      },
      {
        "name": "decrement",
      },
    ]
  }
  accessibilityLabel="Slider"
  accessibilityRole="adjustable"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 50,
    }
  }
  height={20}
  justifyContent="center"
  onAccessibilityAction={[Function]}
  opacity={1}
  testID="slider"
>
  <View
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#E5E7EB",
        "borderRadius": 3,
        "height": 6,
      }
    }
    testID="slider-track"
  >
    <View
      style={
        {
          "backgroundColor": "#2563EB",
          "borderRadius": 3,
          "height": 6,
          "width": 0,
        }
      }
      testID="slider-fill"
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E5E7EB",
        "borderRadius": 10,
        "borderWidth": 1,
        "height": 20,
        "left": -10,
        "position": "absolute",
        "width": 20,
      }
    }
    testID="slider-thumb"
  />
</View>
`;

exports[`Slider component snapshots large size disabled 1`] = `
<View
  accessibilityActions={
    [
      {
        "name": "increment",
      },
      {
        "name": "decrement",
      },
    ]
  }
  accessibilityLabel="Slider"
  accessibilityRole="adjustable"
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 80,
    }
  }
  height={24}
  justifyContent="center"
  onAccessibilityAction={[Function]}
  opacity={0.5}
  testID="slider"
>
  <View
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#E5E7EB",
        "borderRadius": 4,
        "height": 8,
      }
    }
    testID="slider-track"
  >
    <View
      style={
        {
          "backgroundColor": "#2563EB",
          "borderRadius": 4,
          "height": 8,
          "width": 0,
        }
      }
      testID="slider-fill"
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E5E7EB",
        "borderRadius": 12,
        "borderWidth": 1,
        "height": 24,
        "left": -12,
        "position": "absolute",
        "width": 24,
      }
    }
    testID="slider-thumb"
  />
</View>
`;

exports[`Slider component snapshots small size at 25% 1`] = `
<View
  accessibilityActions={
    [
      {
        "name": "increment",
      },
      {
        "name": "decrement",
      },
    ]
  }
  accessibilityLabel="Slider"
  accessibilityRole="adjustable"
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessibilityValue={
    {
      "max": 100,
      "min": 0,
      "now": 25,
    }
  }
  height={16}
  justifyContent="center"
  onAccessibilityAction={[Function]}
  opacity={1}
  testID="slider"
>
  <View
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#E5E7EB",
        "borderRadius": 2,
        "height": 4,
      }
    }
    testID="slider-track"
  >
    <View
      style={
        {
          "backgroundColor": "#2563EB",
          "borderRadius": 2,
          "height": 4,
          "width": 0,
        }
      }
      testID="slider-fill"
    />
  </View>
  <View
    pointerEvents="none"
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E5E7EB",
        "borderRadius": 8,
        "borderWidth": 1,
        "height": 16,
        "left": -8,
        "position": "absolute",
        "width": 16,
      }
    }
    testID="slider-thumb"
  />
</View>
`;
